--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Final_Exam</string>
+    <string name="SearchApp_name">热量查询</string>
+    <string name="Search_hint">请输入要查询的食物</string>
+    <string name="Search_Btn">搜索</string>
 </resources>
